# titanic-survival-predictor

./: README.md
app/: Dockerfile.dockerfile  README.md  main.py  pyproject.toml  requirements.txt  scaler.pkl  titanic_model.keras
model/: README.md  pyproject.toml  train.py
